--- a/Chat/HeaderTableViewCell.xib
+++ b/Chat/HeaderTableViewCell.xib
@@ -12,29 +12,28 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="HeaderTableViewCell" customModule="PhraseSpace" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <view contentMode="scaleToFill" id="7Ja-UP-Mpd" customClass="HeaderTableViewCell" customModule="PhraseSpace" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
-                <autoresizingMask key="autoresizingMask"/>
-                <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GZB-vp-Qgk">
-                        <rect key="frame" x="139" y="12" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                </subviews>
-                <constraints>
-                    <constraint firstItem="GZB-vp-Qgk" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Upt-ID-D3S"/>
-                    <constraint firstItem="GZB-vp-Qgk" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="esr-yV-0Ni"/>
-                </constraints>
-            </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hXP-4h-WQf">
+                    <rect key="frame" x="166" y="30" width="42" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstItem="hXP-4h-WQf" firstAttribute="centerY" secondItem="7Ja-UP-Mpd" secondAttribute="centerY" id="5LW-DK-Vsp"/>
+                <constraint firstItem="hXP-4h-WQf" firstAttribute="centerX" secondItem="7Ja-UP-Mpd" secondAttribute="centerX" id="G6L-i9-wxa"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <viewLayoutGuide key="safeArea" id="jbB-J7-hYo"/>
             <connections>
-                <outlet property="phraseLabel" destination="GZB-vp-Qgk" id="ZQZ-EP-QIa"/>
+                <outlet property="textLabel" destination="hXP-4h-WQf" id="MEH-nK-qk6"/>
             </connections>
-        </tableViewCell>
+            <point key="canvasLocation" x="2" y="41"/>
+        </view>
     </objects>
 </document>
